--- a/app/src/main/res/layout-land/app_list_item.xml
+++ b/app/src/main/res/layout-land/app_list_item.xml
@@ -11,7 +11,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="@dimen/item_margin"
-        card_view:contentPadding="@dimen/item_padding"
         card_view:cardCornerRadius="@dimen/corner_radius"
         card_view:cardElevation="10dp"
         card_view:layout_constraintBottom_toBottomOf="parent"
@@ -23,7 +22,10 @@
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:padding="@dimen/item_padding"
+            android:background="?android:attr/selectableItemBackground">
 
             <ImageView
                 android:id="@+id/image"
