- created new Fragments for lists: RunningTimer,TempTimer, TimerGroup

--- a/app/src/main/res/layout/app_list.xml
+++ b/app/src/main/res/layout/app_list.xml
@@ -8,5 +8,5 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    tools:context=".fragments.list.AppList"
+    tools:context=".fragments.list.timergroup.TimerGroupList"
     tools:listitem="@layout/app_list_item" />
