- list fragments now implement onAppListIntergaction() - timer list view model further coded - renamed timerList.java to DetailedTimerList.java - TempTimer model created - TimerRepository method added and adapted - DummyPizza and DummyTempTimer classes written - xml layouts for different timer lists created

--- a/app/src/main/res/layout/app_list.xml
+++ b/app/src/main/res/layout/app_list.xml
@@ -9,4 +9,4 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     tools:context=".fragments.list.timergroup.TimerGroupList"
-    tools:listitem="@layout/app_list_item" />
+    tools:listitem="@layout/detailed_timer_list_item" />
