- DummyRunningTimerTimer.java implemented - all timer lists now have a TreeMap to sort the entries - Dummy classes now are all static - new class: AppRunningTimerRecyclerAdapter - running timer list now shows the dummyRunningTimer

--- a/app/src/main/res/layout/running_timer_list_item.xml
+++ b/app/src/main/res/layout/running_timer_list_item.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="obj" type="de.softinva.multitimer.model.DetailedTimer" />
+        <variable name="obj" type="de.softinva.multitimer.model.Timer" />
     </data>
 
     <LinearLayout
