- onClickListener now in ViewObjectes implemented

--- a/app/src/main/res/layout/timer_group_list_item.xml
+++ b/app/src/main/res/layout/timer_group_list_item.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="obj" type="de.softinva.multitimer.model.TimerGroup" />
+        <variable name="obj" type="de.softinva.multitimer.fragments.list.timergroup.TimerGroupViewObject" />
     </data>
 
     <LinearLayout
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_weight="2"
-            android:text="@{obj.title}" />
+            android:text="@{obj.timerGroup.title}" />
 
         <ImageView
             android:id="@+id/icon"
@@ -40,7 +40,8 @@
             android:layout_marginRight="@dimen/item_margin"
             android:contentDescription="Image"
             android:tint="@color/colorAccent"
-            app:srcCompat="@drawable/ic_av_timer_black_24dp" />
+            app:srcCompat="@drawable/ic_av_timer_black_24dp"
+            android:onClick="@{obj::onClickButton}"/>
 
     </LinearLayout>
 </layout>
