- timerGroup list now differentiats between zipped groups   and not zipped groups   -> different icons are shown

--- a/app/src/main/res/layout-land/timer_group_list_item.xml
+++ b/app/src/main/res/layout-land/timer_group_list_item.xml
@@ -60,7 +60,7 @@
                     android:layout_marginRight="@dimen/item_margin"
                     android:contentDescription="Image"
                     android:tint="@color/colorAccent"
-                    app:srcCompat="@drawable/ic_av_timer_black_24dp"
+                    android:src="@{obj.buttonSrcCompat}"
                     android:onClickListener="@{obj::onClickButton}"/>
             </LinearLayout>
 
