--- a/app/src/main/res/layout/timer_group_list_item.xml
+++ b/app/src/main/res/layout/timer_group_list_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable name="obj" type="de.softinva.multitimer.fragments.list.timergroup.TimerGroupViewObject" />
     </data>
 
     <LinearLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
@@ -31,6 +31,7 @@
             android:layout_weight="2"
             android:text="@{obj.timerGroup.title}" />
 
+
         <ImageView
             android:id="@+id/icon"
             android:layout_width="wrap_content"
@@ -40,8 +41,8 @@
             android:layout_marginRight="@dimen/item_margin"
             android:contentDescription="Image"
             android:tint="@color/colorAccent"
-            app:srcCompat="@drawable/ic_av_timer_black_24dp"
-            android:onClick="@{obj::onClickButton}"/>
+            android:src="@{obj.buttonSrcCompat}"
+            android:onClick="@{obj::onClickButton}" />
 
     </LinearLayout>
 </layout>
