--- a/app/src/main/res/layout-land/running_timer_list_item.xml
+++ b/app/src/main/res/layout-land/running_timer_list_item.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="obj" type="de.softinva.multitimer.model.Timer" />
+        <variable name="obj" type="de.softinva.multitimer.model.RunningTimer" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,7 +48,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/text_margin"
                     android:layout_weight="2"
-                    android:text="@{obj.title}"
+                    android:text="@{obj.timer.title + obj.countDownInSec.toString()}"
                     android:textStyle="bold" />
 
                 <ImageView
