- not AppPOJO class implementation with createViewObject() more   -> direct new object creation - data binding: obj-> viewObject - detailedTimerList, tempTimer now has runningTimer as viewObject - new classes created: RunningTimerViewObject and TempTimerViewObject - new methods to create viewObjects

--- a/app/src/main/res/layout-land/detailed_timer_list_item.xml
+++ b/app/src/main/res/layout-land/detailed_timer_list_item.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="obj" type="de.softinva.multitimer.fragments.list.timer.DetailedTimerViewObject" />
+        <variable name="viewObject" type="de.softinva.multitimer.fragments.list.timer.DetailedTimerViewObject" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -48,7 +48,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/text_margin"
                     android:layout_weight="2"
-                    android:text="@{obj.timer.title}"
+                    android:text="@{viewObject.obj.timer.title}"
                     android:textStyle="bold" />
 
                 <ImageView
@@ -61,7 +61,7 @@
                     android:contentDescription="Image"
                     android:tint="@color/colorAccent"
                     app:srcCompat="@drawable/ic_av_timer_black_24dp"
-                    android:onClick="@{obj::onClickButton}"/>
+                    android:onClick="@{viewObject::onClickButton}"/>
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
