--- a/app/src/main/res/layout/timer_group_list_item.xml
+++ b/app/src/main/res/layout/timer_group_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="obj" type="de.softinva.multitimer.fragments.list.timergroup.TimerGroupViewObject" />
+        <variable name="viewObject" type="de.softinva.multitimer.fragments.list.timergroup.TimerGroupViewObject" />
     </data>
 
     <LinearLayout
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_weight="2"
-            android:text="@{obj.timerGroup.title}" />
+            android:text="@{viewObject.obj.title}" />
 
 
         <ImageView
@@ -41,8 +41,8 @@
             android:layout_marginRight="@dimen/item_margin"
             android:contentDescription="Image"
             android:tint="@color/colorAccent"
-            android:src="@{obj.buttonSrcCompat}"
-            android:onClick="@{obj::onClickButton}" />
+            android:src="@{viewObject.buttonSrcCompat}"
+            android:onClick="@{viewObject::onClickButton}" />
 
     </LinearLayout>
 </layout>
