--- a/app/src/main/res/layout/temp_timer_list_item.xml
+++ b/app/src/main/res/layout/temp_timer_list_item.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="obj" type="de.softinva.multitimer.model.TempTimer" />
+        <variable name="viewObject" type="de.softinva.multitimer.fragments.list.temp.TempTimerViewObject" />
     </data>
 
     <LinearLayout
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:layout_weight="2"
-            android:text="@{obj.title}" />
+            android:text="@{viewObject.obj.timer.title}" />
 
         <ImageView
             android:id="@+id/icon"
