detailed timer list - if the timer is running, then the icon gets green - timer can now be stopped

--- a/app/src/main/res/layout/detailed_timer_list_item.xml
+++ b/app/src/main/res/layout/detailed_timer_list_item.xml
@@ -39,7 +39,7 @@
             android:layout_marginEnd="@dimen/item_margin"
             android:layout_marginRight="@dimen/item_margin"
             android:contentDescription="Image"
-            android:tint="@color/colorAccent"
+            android:tint="@{viewObject.obj.isRunning?@color/colorPrimary:@color/colorAccent}"
             app:srcCompat="@drawable/ic_av_timer_black_24dp"
             android:onClick="@{viewObject::onClickButton}"/>
 
