--- a/app/src/main/res/layout-land/detailed_timer_list_item.xml
+++ b/app/src/main/res/layout-land/detailed_timer_list_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable name="viewObject" type="de.softinva.multitimer.fragments.list.timer.DetailedTimerViewObject" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -25,8 +24,7 @@
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="?android:attr/selectableItemBackground"
@@ -51,17 +49,16 @@
                     android:text="@{viewObject.obj.timer.title}"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/icon"
+                <de.softinva.multitimer.viewcomponents.StartStopTimerButton
+                    xmlns:startStop="http://schemas.android.com/apk/res/de.softinva.multitimer"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/item_margin"
                     android:layout_marginRight="@dimen/item_margin"
-                    android:contentDescription="Image"
-                    android:tint="@{viewObject.obj.isRunning?@color/colorPrimary:@color/colorAccent}"
-                    app:srcCompat="@drawable/ic_av_timer_black_24dp"
-                    android:onClick="@{viewObject::onClickButton}"/>
+                    startStop:isRunning="@{viewObject.obj.isRunning}"
+                    startStop:timer="@{viewObject.obj.timer.toTimer()}"/>
+
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
